--- a/package.json
+++ b/package.json
@@ -1,31 +1,23 @@
 {
-  "name": "parcel-project-template",
-  "version": "1.1.0",
+  "name": "goit-js-hw-08",
+  "version": "1.0.0",
   "description": "",
-  "homepage": "https://github.com/winston4521/goit-js-hw-08",
+  "main": "index.js",
   "scripts": {
-    "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "(https://github.com/winston4521/goit-js-hw-08)"
   },
-  "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Andrii Pozniak",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+  "devDependencies": {
+    "parcel": "^2.7.0",
+    "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
-    "modern-normalize": "^1.1.0",
     "simplelightbox": "^2.10.3"
-  },
-  "devDependencies": {
-    "@parcel/transformer-sass": "^2.6.0",
-    "parcel": "^2.6.0",
-    "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4"
-  },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  }
 }
