--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@vimeo/player": "^2.17.1",
     "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
-    "simplelightbox": "^2.10.3"
+    "simplelightbox": "^2.10.3",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
